add point cap to scoring preset
